--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,6 +10,7 @@
         android:required="false" />
 
     <application
+        android:name=".App"
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
@@ -18,13 +19,12 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.DatasetApp"
-        android:name=".App"
         tools:targetApi="31">
         <activity
-            android:name=".view.VerifikasiDataActivity"
+            android:name=".view.verifikasidata.VerifikasiDataActivity"
             android:exported="false" />
         <activity
-            android:name=".DashboardActivity"
+            android:name=".view.startktp.StartKtpActivity"
             android:exported="false" />
         <activity
             android:name=".MainActivity"
