--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,6 +21,9 @@
         android:theme="@style/Theme.DatasetApp"
         tools:targetApi="31">
         <activity
+            android:name=".view.startselfie.StartSelfieActivity"
+            android:exported="false" />
+        <activity
             android:name=".view.verifikasidata.VerifikasiDataActivity"
             android:exported="false" />
         <activity
